# rqmd

./: .gitattributes  .gitignore  BENCHMARK.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  example-index.yml  flake.nix
.cargo/: config.toml
.github/workflows/: nix.yml  release.yml  rust.yml  security.yml
crates/rqmd-cli/: Cargo.toml
crates/rqmd-cli/src/: exclusions.rs  format.rs  main.rs  store.rs
crates/rqmd-cli/src/commands/: bench.rs  collection.rs  context.rs  eval.rs  get.rs  index.rs  mcp.rs  mod.rs  query.rs
crates/rqmd-core/: Cargo.toml
crates/rqmd-core/examples/: eval.rs
crates/rqmd-core/src/: chunking.rs  db.rs  fts.rs  hnsw.rs  lib.rs  query.rs  resolve.rs  rrf.rs  store.rs  types.rs
crates/rqmd-core/tests/: integration.rs
crates/rqmd-llm/: Cargo.toml
crates/rqmd-llm/src/: lib.rs  ort_backend.rs
crates/rqmd-mcp/: Cargo.toml
crates/rqmd-mcp/src/: lib.rs  server.rs
docs/: SYNTAX.md
packaging/homebrew/: rqmd.rb
scripts/: build-release-notes.sh  bump-version.sh  check-version-sync.sh  crosscheck.sh  install.sh  pre-push  update-homebrew-formula.sh
