[workspace]
members = ["crates/*"]
resolver = "2"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 4
strip = "debuginfo"

# dist profile: maximally optimized + stripped for release binaries.
# Usage: cargo build --profile dist -p rqmd-cli
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
