[package]
name = "rqmd-cli"
version = "0.1.4"
edition = "2021"
description = "rqmd CLI — hybrid local document search"

[[bin]]
name = "rqmd"
path = "src/main.rs"

[features]
default = []
# Enable ONNX Runtime backend (CoreML/CUDA/DirectML) — passes through to rqmd-llm
ort-backend = ["rqmd-llm/ort-backend"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
indicatif = "0.17"
rqmd-core = { path = "../rqmd-core" }
rqmd-llm = { path = "../rqmd-llm" }
rqmd-mcp = { path = "../rqmd-mcp" }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
