[package]
name = "rqmd-core"
version.workspace = true
edition = "2021"
description = "rqmd core engine — BM25 + vector hybrid search with RRF fusion"
repository = "https://github.com/tylern91/rqmd"
keywords = ["search", "tantivy", "bm25", "vector-search", "rag"]
categories = ["text-processing", "database"]
publish = false

[dependencies]
anyhow = "1"
rqmd-llm = { path = "../rqmd-llm" }
tracing = "0.1"
regex = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", features = ["std"] }
hex = "0.4"
tantivy = "0.26"
usearch = "2.25"

[dev-dependencies]
tempfile = "3"
