[package]
name = "rqmd-llm"
version = "0.2.0"
edition = "2021"
description = "rqmd inference backend — LlamaCpp and ONNX Runtime backends for embedding and reranking"
repository = "https://github.com/tylern91/rqmd"
keywords = ["llama", "onnx", "embedding", "reranking", "inference"]
categories = ["science", "text-processing"]
publish = false

[features]
# Metal (Apple GPU) enabled by default — a no-op on non-Apple platforms.
default = ["metal"]
# GPU acceleration: select the layer(s) appropriate for your hardware.
metal  = ["llama-cpp-2/metal"]    # Apple Silicon / Metal (macOS)
cuda   = ["llama-cpp-2/cuda"]     # NVIDIA CUDA
vulkan = ["llama-cpp-2/vulkan"]   # Cross-vendor Vulkan GPU
# ONNX Runtime backend with pluggable execution providers
# (CoreML on macOS, CUDA on Linux, DirectML on Windows, CPU fallback).
ort-backend = ["dep:ort", "dep:tokenizers", "dep:ndarray"]

[dependencies]
anyhow = "1"
encoding_rs = "0.8"
hf-hub = { version = "0.5", features = ["tokio"] }
llama-cpp-2 = { version = "0.1.150", features = ["sampler"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"

# OrtBackend (optional, enabled via ort-backend feature)
ort        = { version = "=2.0.0-rc.12", optional = true, features = ["coreml"] }
tokenizers = { version = "0.23", optional = true, default-features = false, features = ["http", "fancy-regex"] }
ndarray    = { version = "0.17", optional = true }
